--- a/cn.zh-CN/使用指南/登录控制台/数据上云/使用指南/任务管理/周期任务管理.md
+++ b/cn.zh-CN/使用指南/登录控制台/数据上云/使用指南/任务管理/周期任务管理.md
@@ -13,7 +13,7 @@
 ## 周期任务新建MySQL、Sql Server、Oracle to MaxComput {#section_0di_qi2_08c .section}
 
 1.  在顶部导航栏单击任务管理，出现新增周期任务页面单击新增任务，在周期任务新建根据流程对任务进行新建。
-2.  在周期任务新建页面，进行填写基本信息。![MySQL、Sql Server、Oracle to MaxComput周期任务新建填写基本信息](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156802868755316_zh-CN.png)
+2.  在周期任务新建页面，进行填写基本信息。![MySQL、Sql Server、Oracle to MaxCompute周期任务新建填写基本信息](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156809707055316_zh-CN.png)
 
  
 
@@ -22,7 +22,7 @@
     |任务名称|输入上云任务的名称，例如：机动车基本信息上云。|
     |描述|输入任务描述，例如：对应上述机动车基本信息表的上云，描述信息包括机动车序号、号牌种类、号牌号码、中文品牌、车辆型号、英文品牌、国产/进口、制造国、制造厂名称、车辆识别代号、发动机号等信息。|
 
-3.  填写基本信息操作完成后，单击选择数据源，在选择数据源区域中进行**数据源** \> **数据对象**的选择，完成后自动弹出数据对象的字段和类型等信息。![MySQL、Sql Server、Oracle to MaxComput周期任务选择数据源](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156802868755325_zh-CN.png)
+3.  填写基本信息操作完成后，单击选择数据源，在选择数据源区域中进行**数据源** \> **数据对象**的选择，完成后自动弹出数据对象的字段和类型等信息。![MySQL、Sql Server、Oracle to MaxComput周期任务选择数据源](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156809707055325_zh-CN.png)
 
  
 
@@ -37,17 +37,17 @@
 
     如果选择数据源如果无法取到meta信息的时候，单任务创建数据源端支持手动创建meta。
 
-    ![MySQL、Sql Server、Oracle to MaxComput周期任务创建数据源手动建表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156802868755354_zh-CN.png)
+    ![MySQL、Sql Server、Oracle to MaxComput周期任务创建数据源手动建表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156809707155354_zh-CN.png)
 
-    ![MySQL、Sql Server、Oracle to MaxComput周期任务创建数据源创建表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156802868755355_zh-CN.png)
+    ![MySQL、Sql Server、Oracle to MaxComput周期任务创建数据源创建表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156809707155355_zh-CN.png)
 
-4.  选择数据源操作完成后，单击选择目标端，在选择目标端区域中进行**目标端** \> **数据对象**的选择，完成后自动弹出数据对象的字段和类型等信息。![MySQL、Sql Server、Oracle to MaxComput新建周期任务目标端选择](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156802868756461_zh-CN.png)
+4.  选择数据源操作完成后，单击选择目标端，在选择目标端区域中进行**目标端** \> **数据对象**的选择，完成后自动弹出数据对象的字段和类型等信息。![MySQL、Sql Server、Oracle to MaxComput新建周期任务目标端选择](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156809707156461_zh-CN.png)
 
  
 
     |输入项|说明|
     |---|--|
-    |目标端|先选择目标端类型：MaxComput，再选择该类型下的目标端。|
+    |目标端|先选择目标端类型：MaxCompute，再选择该类型下的目标端。|
     |数据对象|选择已经同步的数据对象，显示分区字段与非分区字段信息；如果认为没有符合条件的可以单击创建目标表，默认显示主键字段信息，输入表名、描述、字段类型、长度及字段描述等。|
     |清理规则|因为MaxComput数据都是周期性数据，根据需要可选择写入前清理已有数据与写入前保留已有数据。 写入前清理：实例每次运行时，会先将数据清理，然后再写入（用户选改选项不容易产生数据冗余）。 写入前保留：实例每次运行时，不会将数据清理，直接写入。|
 
@@ -57,14 +57,14 @@
 
     如果选择目标端不符合要求，认为需要单任务创建目标端支持手动创建Meta。
 
-    ![MySQL、Sql Server、Oracle to MaxComput周期任务创建目标端手动建表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156802868755349_zh-CN.png)
+    ![MySQL、Sql Server、Oracle to MaxComput周期任务创建目标端手动建表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156809707155349_zh-CN.png)
 
-    ![MySQL、Sql Server、Oracle to MaxComput创建目标表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156802868756466_zh-CN.png)
+    ![MySQL、Sql Server、Oracle to MaxComput创建目标表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156809707156466_zh-CN.png)
 
-5.  选择目标端操作完成后，单击字段映射，在字段映射区域中单击同名映射自动链接同名字段；如果字段不同名也可手工链接。![MySQL、Sql Server、Oracle to MaxComput周期任务创建字段映射](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156802868755361_zh-CN.png)
+5.  选择目标端操作完成后，单击字段映射，在字段映射区域中单击同名映射自动链接同名字段；如果字段不同名也可手工链接。![MySQL、Sql Server、Oracle to MaxComput周期任务创建字段映射](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156809707155361_zh-CN.png)
 
 
-6.  字段映射操作完成后，单击配置任务调度，在配置任务调度区域中按提示输入配置信息，操作完成后单击提交，周期任务完成创建。![MySQL、Sql Server、Oracle to MaxComput周期任务创建配置调度任务](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156802868855363_zh-CN.png)
+6.  字段映射操作完成后，单击配置任务调度，在配置任务调度区域中按提示输入配置信息，操作完成后单击提交，周期任务完成创建。![MySQL、Sql Server、Oracle to MaxComput周期任务创建配置调度任务](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156809707155363_zh-CN.png)
 
  
 
@@ -83,7 +83,7 @@
 ## 周期任务新建MySQL、Sql Server、Oracle to 、Sql Server、Oracle to DataHub {#section_0di_qi2_08c .section}
 
 1.  在顶部导航栏单击任务管理，出现新增周期任务页面单击新增任务，在周期任务新建根据流程对任务进行新建。
-2.  在周期任务新建页面，进行填写基本信息。![MySQL、Sql Server、Oracle to DataHub周期任务新建填写基本信息](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156802868755316_zh-CN.png)
+2.  在周期任务新建页面，进行填写基本信息。![MySQL、Sql Server、Oracle to DataHub周期任务新建填写基本信息](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156809707055316_zh-CN.png)
 
  
 
@@ -92,7 +92,7 @@
     |任务名称|输入上云任务的名称，例如：机动车基本信息上云。|
     |描述|输入任务描述，例如：对应上述机动车基本信息表的上云，描述信息包括机动车序号、号牌种类、号牌号码、中文品牌、车辆型号、英文品牌、国产/进口、制造国、制造厂名称、车辆识别代号、发动机号等信息。|
 
-3.  填写基本信息操作完成后，单击选择数据源，在选择数据源区域中进行**数据源** \> **数据对象**的选择，完成后自动弹出数据对象的字段和类型等信息。![MySQL、Sql Server、Oracle to DataHub周期任务选择数据源](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156802868755325_zh-CN.png)
+3.  填写基本信息操作完成后，单击选择数据源，在选择数据源区域中进行**数据源** \> **数据对象**的选择，完成后自动弹出数据对象的字段和类型等信息。![MySQL、Sql Server、Oracle to DataHub周期任务选择数据源](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156809707055325_zh-CN.png)
 
  
 
@@ -107,11 +107,11 @@
 
     如果选择数据源如果无法取到meta信息的时候，单任务创建数据源端支持手动创建meta。
 
-    ![MySQL、Sql Server、Oracle to DataHub周期任务创建数据源手动建表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156802868755354_zh-CN.png)
+    ![MySQL、Sql Server、Oracle to DataHub周期任务创建数据源手动建表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156809707155354_zh-CN.png)
 
-    ![MySQL、Sql Server、Oracle to DataHub周期任务创建数据源创建表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156802868755355_zh-CN.png)
+    ![MySQL、Sql Server、Oracle to DataHub周期任务创建数据源创建表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156809707155355_zh-CN.png)
 
-4.  选择数据源操作完成后，单击选择目标端，在选择目标端区域中进行**目标端** \> **数据对象**的选择，完成后自动弹出数据对象的字段和类型等信息。![MySQL、Sql Server、Oracle to DataHub新建周期任务目标端选择](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156802868856476_zh-CN.png)
+4.  选择数据源操作完成后，单击选择目标端，在选择目标端区域中进行**目标端** \> **数据对象**的选择，完成后自动弹出数据对象的字段和类型等信息。![MySQL、Sql Server、Oracle to DataHub新建周期任务目标端选择](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156809707256476_zh-CN.png)
 
  
 
@@ -124,14 +124,14 @@
 
     如果选择目标端不符合要求，认为需要单任务创建目标端支持手动创建Meta。
 
-    ![MySQL、Sql Server、Oracle to DataHub手动创建Topic](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156802868856483_zh-CN.png)
+    ![MySQL、Sql Server、Oracle to DataHub手动创建Topic](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156809707256483_zh-CN.png)
 
-    ![MySQL、Sql Server、Oracle to DataHub创建Topic](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156802868856486_zh-CN.png)
+    ![MySQL、Sql Server、Oracle to DataHub创建Topic](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156809707256486_zh-CN.png)
 
-5.  选择目标端操作完成后，单击字段映射，在字段映射区域中单击同名映射自动链接同名字段；如果字段不同名也可手工链接。![MySQL、Sql Server、Oracle to DataHub周期任务创建字段映射](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156802868755361_zh-CN.png)
+5.  选择目标端操作完成后，单击字段映射，在字段映射区域中单击同名映射自动链接同名字段；如果字段不同名也可手工链接。![MySQL、Sql Server、Oracle to DataHub周期任务创建字段映射](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156809707155361_zh-CN.png)
 
 
-6.  字段映射操作完成后，单击配置任务调度，在配置任务调度区域中按提示输入配置信息，操作完成后单击提交，周期任务完成创建。![MySQL、Sql Server、Oracle to DataHub周期任务创建配置调度任务](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156802868855363_zh-CN.png)
+6.  字段映射操作完成后，单击配置任务调度，在配置任务调度区域中按提示输入配置信息，操作完成后单击提交，周期任务完成创建。![MySQL、Sql Server、Oracle to DataHub周期任务创建配置调度任务](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156809707155363_zh-CN.png)
 
  
 
@@ -150,7 +150,7 @@
 ## 周期任务新建MySQL、Sql Server、Oracle to 、Sql Server、Oracle to OTS {#section_0di_qi2_08c .section}
 
 1.  在顶部导航栏单击任务管理，出现新增周期任务页面单击新增任务，在周期任务新建根据流程对任务进行新建。
-2.  在周期任务新建页面，进行填写基本信息。![MySQL、Sql Server、Oracle to DataHub周期任务新建填写基本信息](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156802868755316_zh-CN.png)
+2.  在周期任务新建页面，进行填写基本信息。![MySQL、Sql Server、Oracle to DataHub周期任务新建填写基本信息](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156809707055316_zh-CN.png)
 
  
 
@@ -159,7 +159,7 @@
     |任务名称|输入上云任务的名称，例如：机动车基本信息上云。|
     |描述|输入任务描述，例如：对应上述机动车基本信息表的上云，描述信息包括机动车序号、号牌种类、号牌号码、中文品牌、车辆型号、英文品牌、国产/进口、制造国、制造厂名称、车辆识别代号、发动机号等信息。|
 
-3.  填写基本信息操作完成后，单击选择数据源，在选择数据源区域中进行**数据源** \> **数据对象**的选择，完成后自动弹出数据对象的字段和类型等信息。![MySQL、Sql Server、Oracle to DataHub周期任务选择数据源](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156802868755325_zh-CN.png)
+3.  填写基本信息操作完成后，单击选择数据源，在选择数据源区域中进行**数据源** \> **数据对象**的选择，完成后自动弹出数据对象的字段和类型等信息。![MySQL、Sql Server、Oracle to DataHub周期任务选择数据源](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156809707055325_zh-CN.png)
 
  
 
@@ -174,11 +174,11 @@
 
     如果选择数据源如果无法取到meta信息的时候，单任务创建数据源端支持手动创建meta。
 
-    ![MySQL、Sql Server、Oracle to OTS周期任务创建数据源手动建表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156802868755354_zh-CN.png)
+    ![MySQL、Sql Server、Oracle to OTS周期任务创建数据源手动建表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156809707155354_zh-CN.png)
 
-    ![MySQL、Sql Server、Oracle to OTS周期任务创建数据源创建表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156802868755355_zh-CN.png)
+    ![MySQL、Sql Server、Oracle to OTS周期任务创建数据源创建表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156809707155355_zh-CN.png)
 
-4.  选择数据源操作完成后，单击选择目标端，在选择目标端区域中进行**目标端** \> **数据对象**的选择，完成后自动弹出数据对象的字段和类型等信息。![MySQL、Sql Server、Oracle to OTS新建周期任务目标端选择](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156802868956493_zh-CN.png)
+4.  选择数据源操作完成后，单击选择目标端，在选择目标端区域中进行**目标端** \> **数据对象**的选择，完成后自动弹出数据对象的字段和类型等信息。![MySQL、Sql Server、Oracle to OTS新建周期任务目标端选择](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156809707256493_zh-CN.png)
 
  
 
@@ -195,14 +195,14 @@
     -   数据有效版本偏差：写入数据所有列的版本号与写入时时间的差值需要在数据有效版本偏差范围之内，否者将会写入失败。
     如果选择目标端不符合要求，认为需要单任务创建目标端支持手动创建Meta。
 
-    ![MySQL、Sql Server、Oracle to OTS周期任务创建手动建表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156802868956503_zh-CN.png)
+    ![MySQL、Sql Server、Oracle to OTS周期任务创建手动建表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156809707256503_zh-CN.png)
 
-    ![MySQL、Sql Server、Oracle to OTS周期任务创建目标表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156802868956504_zh-CN.png)
+    ![MySQL、Sql Server、Oracle to OTS周期任务创建目标表](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156809707356504_zh-CN.png)
 
-5.  选择目标端操作完成后，单击字段映射，在字段映射区域中单击同名映射自动链接同名字段；如果字段不同名也可手工链接。![MySQL、Sql Server、Oracle to OTS周期任务创建字段映射](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156802868755361_zh-CN.png)
+5.  选择目标端操作完成后，单击字段映射，在字段映射区域中单击同名映射自动链接同名字段；如果字段不同名也可手工链接。![MySQL、Sql Server、Oracle to OTS周期任务创建字段映射](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156809707155361_zh-CN.png)
 
 
-6.  字段映射操作完成后，单击配置任务调度，在配置任务调度区域中按提示输入配置信息，操作完成后单击提交，周期任务完成创建。![MySQL、Sql Server、Oracle to OTS周期任务创建配置调度任务](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156802868855363_zh-CN.png)
+6.  字段映射操作完成后，单击配置任务调度，在配置任务调度区域中按提示输入配置信息，操作完成后单击提交，周期任务完成创建。![MySQL、Sql Server、Oracle to OTS周期任务创建配置调度任务](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1319232/156809707155363_zh-CN.png)
 
  
 
@@ -220,10 +220,10 @@
 
 ## 周期任务批量新增 {#section_1q0_ri3_349 .section}
 
-1.  在周期任务管理页面单击批量新增任务进入批量新增实时任务页面。在数据源选择框，选择**数据源类型** \> **数据源** \> **数据对象**操作完成后点击选择目标端。![周期任务批量新增选择数据源](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156802868956508_zh-CN.png)
+1.  在周期任务管理页面单击批量新增任务进入批量新增实时任务页面。在数据源选择框，选择**数据源类型** \> **数据源** \> **数据对象**操作完成后点击选择目标端。![周期任务批量新增选择数据源](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156809707356508_zh-CN.png)
 
 
-2.  在数据源选择操作完成后，进入选择目标端页面，选择**目标端类型** \> **目标端** \> **数据对象**操作完成后单击配置任务调度。![批量新增周期任务选择目标端](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156802868956509_zh-CN.png)
+2.  在数据源选择操作完成后，进入选择目标端页面，选择**目标端类型** \> **目标端** \> **数据对象**操作完成后单击配置任务调度。![批量新增周期任务选择目标端](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156809707356509_zh-CN.png)
 
  
 
@@ -231,34 +231,34 @@
 
     选择表存在则加前缀或后缀与所有表名加前缀或后缀这两类型才会出现前后缀的输入。
 
-3.  在目标端选择操作完成后，进入配置任务调度页面，输入任务配置调度信息，操作完成后，单击review任务。![批量新增周期任务配置调度任务](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156802868956512_zh-CN.png)
+3.  在目标端选择操作完成后，进入配置任务调度页面，输入任务配置调度信息，操作完成后，单击review任务。![批量新增周期任务配置调度任务](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156809707356512_zh-CN.png)
 
 
-4.  在配置任务调度操作完成后，进入review任务，查看并支持修改、删除任务信息，操作完成后，单击提交。![批量新增周期任务review任务](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156802868956513_zh-CN.png)
+4.  在配置任务调度操作完成后，进入review任务，查看并支持修改、删除任务信息，操作完成后，单击提交。![批量新增周期任务review任务](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156809707356513_zh-CN.png)
 
 
 
 ## 周期任务展示 {#section_8v7_142_fav .section}
 
-1.  单击页面顶部导航栏的任务管理，进入周期任务管理页面，页面主要呈现周期任务名称、数据源、网络名称、调度周期、全量/增量、创建时间、状态、上次运行时间，并可以根据筛选条件自定义查询。![周期任务展示](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156802869056520_zh-CN.png)
+1.  单击页面顶部导航栏的任务管理，进入周期任务管理页面，页面主要呈现周期任务名称、数据源、网络名称、调度周期、全量/增量、创建时间、状态、上次运行时间，并可以根据筛选条件自定义查询。![周期任务展示](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156809707356520_zh-CN.png)
 
 
 
 ## 周期任务查看 {#section_525_9hq_6hp .section}
 
-1.  单击页面顶部导航栏的任务管理，进入周期任务管理页面在周期任务管理管理页面单击**更多** \> **查看**页面展示周期任务的具体信息。![查看周期任务](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156802869056521_zh-CN.png)
+1.  单击页面顶部导航栏的任务管理，进入周期任务管理页面在周期任务管理管理页面单击**更多** \> **查看**页面展示周期任务的具体信息。![查看周期任务](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156809707356521_zh-CN.png)
 
 
 
 ## 周期任务修改 {#section_k1a_izm_wd4 .section}
 
-1.  单击页面顶部导航栏的任务管理，进入周期管理页面在周期任务管理页面，选择需要修改的周期任务信息，单击**更多** \> **修改**按提示修改周期任务信息操作完成后单击提交。![修改周期任务](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156802869056522_zh-CN.png)
+1.  单击页面顶部导航栏的任务管理，进入周期管理页面在周期任务管理页面，选择需要修改的周期任务信息，单击**更多** \> **修改**按提示修改周期任务信息操作完成后单击提交。![修改周期任务](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156809707456522_zh-CN.png)
 
 
 
 ## 周期任务删除 {#section_zrp_0rw_kik .section}
 
-1.  单击页面顶部导航栏的任务管理，进入周期任务管理页面在周期任务管理管理页面，选择需要删除改的周期任务信息，单击**更多** \> **删除**操作完成后单击确定。![删除周期任务](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156802869056523_zh-CN.png)
+1.  单击页面顶部导航栏的任务管理，进入周期任务管理页面在周期任务管理管理页面，选择需要删除改的周期任务信息，单击**更多** \> **删除**操作完成后单击确定。![删除周期任务](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156809707456523_zh-CN.png)
 
  
 
@@ -266,12 +266,12 @@
 
     支持周期任务批量删除操作：选择多条需要删除的信息，单击批量删除，操作完成后单击确定。
 
-    ![周期任务批量删除](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156802869059395_zh-CN.png)
+    ![周期任务批量删除](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156809707459395_zh-CN.png)
 
 
 ## 周期任务运行停止 {#section_agr_r06_79z .section}
 
-1.  单击页面顶部导航栏的任务管理，进入周期任务管理页面在周期任务管理管理页面，选择需要运行或停止的周期任务信息，单击上线或下线。![周期任务启动与停止](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156802869056524_zh-CN.png)
+1.  单击页面顶部导航栏的任务管理，进入周期任务管理页面在周期任务管理管理页面，选择需要运行或停止的周期任务信息，单击上线或下线。![周期任务启动与停止](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1410595/156809707456524_zh-CN.png)
 
  
 
