--- a/cn.zh-CN/产品简介/使用限制.md
+++ b/cn.zh-CN/产品简介/使用限制.md
@@ -1,54 +1,56 @@
-# 使用限制 {#concept_1392446 .concept}
+# 使用限制
 
-本文为您介绍DataQ产品各模块的使用限制。
+本文为您介绍数据资源平台产品各模块的使用限制。
 
-数据上云系统目前支持的数据源与目标端：
+## 系统设置
 
-![数据上云使用限制](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1109478/156809598654261_zh-CN.jpg)
+目前角色包括：租户管理员、租户访客、租户数据资产管理员、租户运维人员、工作组管理员、工作组开发者、工作组分析员、工作组访客。
 
-数据上云系统目前支持的数据模板创建类型：Push API、RabbitMQ
+## 资产管理
 
-## 算法服务 {#section_5xa_zs9_1ai .section}
+系统目前支持Maxcompute、DataHub、Hive。
 
-云计算资源目前系统仅支持：MaxCompute、AnalyticDB、ApsaraDB for RDS、Table Store、Blink、 DataHub Service、Object Storage Service、Zerg-StandaloneZerg-Service。
+## 数据同步
 
-## 智能数仓 {#section_6h7_0jn_klr .section}
+-   目前系统支持的任务链路：
 
-数据探查系统目前仅支持Maxcompute与RDS数据源类型。
+    ![数据源支持类型与版本.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6799060161/p223978.png)
 
-模型DDL生成系统目前仅支持MaxCompute、ADS、RDS、DataHub、DataWorks、Hive。
+-   目前系统支持的批量任务链路：
 
-通过DDL新建模型系统目前仅支持MaxCompute。
+    ![批量任务链路](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0196900161/p211623.png)
 
-分区表达式设置目前支持格式：dt=$\[yyyymmdd\]、dt=$\[yyyymmdd-N\]、dt=<\[a-zA-Z0-9\_-\]\*\> 这三种。
 
-## 智能标签 {#section_w0n_fpy_mnq .section}
+## 数据探查
 
-云计算资源目前系统仅支持：Maxcompute、ApsaraDB for RDS、Analytic DB、Impala、OTS、StreamCompute、DataHub、Oracle、Galaxy、Hive。标签方案的创建目前系统仅支持：宝典模式、TQL模式、算法模式、向导模式。
+系统目前支持MaxCompute、RDS、Hive。
 
-标签方案的创建目前系统仅支持：宝典模式、TQL模式、算法模式、向导模式。
+## 物理化
 
-## 数据探索 {#section_xq1_6h8_dua .section}
+系统目前支持RDS、DataHub、MaxCompute、Hive、MangoDB。
 
-算子制作环境系统目前仅支持：Maxcompute、ADS、Maxgraph、hive、mysql。
+## 表计算逻辑
 
-模型运行环境系统目前仅支持：Maxcompute、ADS、Maxgraph、hive、mysql。
+系统目前支持MaxCompute、Hive、MangoDB。
 
-模型编排环境系统目前仅支持：Maxcompute、ADS。
+## 场景
 
-## 画像分析 {#section_6ks_5ip_cu4 .section}
+-   **计算节点:**目前系统支持Maxcompute、ZergStandalon、ZergService。
+-   **数据同步:**目前系统支持RDS、Hive、Maxcompute、MangoDB、Oracle、SQLServer。
 
-云计算资源目前系统仅支持：阿里云关系型数据库（RDS）、阿里云分析型数据库（AnalyticDB）和oracle、Table Store（OTS）、Impala
+## 标签模型
 
-画像分析系统目前仅支持：已有智能标签系统已有标签。
+目前系统支持：RDS、Hive、Maxcompute、MySQL。
 
-## 数据DNA {#section_zvs_uiw_ypq .section}
+## 标签工厂
 
-数据目录数据源类型系统目前仅支持：MaxCompute、DataHub、Hive。
+目前系统支持：RDS、Hive、Maxcompute。
 
-## 全景监控 {#section_s33_s53_170 .section}
+## 标签同步
 
-监控调度异常预警目前只能通过标准协议与钉钉告警。
+目前系统支持：RDS、Maxcompute。
 
-监控管理目前系统仅支持：dataworks和aimaster的采集或同步。
+## 画像分析
+
+目前系统支持：RDS、Hive、Maxcompute、MySQL、SQLServer、MangoDB。
 
