--- a/cn.zh-CN/产品简介/使用限制.md
+++ b/cn.zh-CN/产品简介/使用限制.md
@@ -14,11 +14,11 @@
 
 -   目前系统支持的任务链路：
 
-    ![数据源支持类型与版本.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6799060161/p223978.png)
+    ![数据同步链路](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4347160161/p224532.png)
 
 -   目前系统支持的批量任务链路：
 
-    ![批量任务链路](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0196900161/p211623.png)
+    ![数据链路批量图.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4347160161/p224533.png)
 
 
 ## 数据探查
