--- a/cn.zh-CN/产品简介/什么是数据资源平台.md
+++ b/cn.zh-CN/产品简介/什么是数据资源平台.md
@@ -1,6 +1,6 @@
 # 什么是数据资源平台
 
-阿里云数据资源平台是构建数据智能的全流程平台，提供数据汇聚、规范设计、数据加工与治理、质量监控、智能分析、资产管理和统一服务等功能；支持行业知识内容沉淀，帮助金融、政府及企业客户快速构建智能数据中台；实现数据资源统一管理，挖掘潜在规律，优化业务决策，助力企业完成数字化转型。
+阿里云数据资源平台是构建数据智能的全流程平台，提供数据汇聚、规范设计、指标与标签体系构建、数据质量管控、数据资产管理、数据资产服务与共享、智能分析等核心功能，支持行业知识内容沉淀，帮助金融、政府及企业客户快速构建智能数据中台，实现数据资源统一管理，挖掘潜在规律，优化业务决策，助力企业完成数字化转型。
 
 ![产品图.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3932330161/p211718.png)
 
