--- a/cn.zh-CN/常见问题/数据标准.md
+++ b/cn.zh-CN/常见问题/数据标准.md
@@ -57,7 +57,7 @@ public final class IdCardChecker extends UDF {
 -   第二个参数，eleMetaStr，数据元Meta定义信息，"\{\\"type\\":\\"STRING\\",\\"size\\":18\}"。
 -   返回值，符合校验，返回0；不符合校验返回1。
 
-并在MaxCompute的UDF管理中，物理化了id\_card\_check这个UDF，且将UDF关联到了身份证号数据元，操作可参考[新建数据元并引用数据字典和质量校验函数]()。
+并在MaxCompute的UDF管理中，物理化了id\_card\_check这个UDF，且将UDF关联到了身份证号数据元。
 
 根据数据元绑定的质量校验UDF，数据建模会据此自动添加对应云计算资源平台下的UDF规则，如自动添加MaxCompute的自定义SQL规则，默认期望值为0，则执行的规则SQL如下：
 
