--- a/cn.zh-CN/快速入门/入门概述.md
+++ b/cn.zh-CN/快速入门/入门概述.md
@@ -9,9 +9,9 @@
 ![快速入门流程](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6979000161/p207761.png)
 
 1.  准备工作：[准备工作](/cn.zh-CN/快速入门/准备工作.md)。
-2.  工作组准备：[新建工作组并添加成员]()。
+2.  工作组准备：[新建工作组并添加成员](/cn.zh-CN/快速入门/新建工作组并添加成员.md)。
 3.  接入数据源： [新建MaxCompute云计算资源](/cn.zh-CN/快速入门/新建MaxCompute云计算资源.md)。
-4.  数据处理：[添加数据处理节点]()。
-5.  新建标签模型：[新建标签模型]()。
-6.  标签圈群：[标签圈群]()。
+4.  数据处理：[添加数据处理节点](/cn.zh-CN/快速入门/添加数据处理节点.md)。
+5.  新建标签模型：[新建标签模型](/cn.zh-CN/快速入门/新建标签模型.md)。
+6.  标签圈群：[标签圈群](/cn.zh-CN/快速入门/标签圈群.md)。
 
