--- a/cn.zh-CN/快速入门/创建阿里云账号.md
+++ b/cn.zh-CN/快速入门/创建阿里云账号.md
@@ -11,7 +11,7 @@
 
 综上所述，使用阿里云数据资源平台前，您需要准备一个阿里云账号，并通过RAM管理子账号。
 
-如果您还没有注册过阿里云账号，请进入[阿里云官网](https://www.aliyun.com/)，单击**免费注册**，即可进入阿里云账号注册页面创建阿里云账号。
+如果您还没有注册过阿里云账号，请进入[阿里云官网](https://www.aliyun.com/)，单击**立即注册**，即可进入阿里云账号注册页面创建阿里云账号。
 
 **说明：** 主账号作为阿里云系统识别的资源消费账号，拥有非常高的权限。请您确保账号和密码的安全，切勿借给其他人员使用，并定期更新密码。
 
