--- a/cn.zh-CN/快速入门/标签圈群.md
+++ b/cn.zh-CN/快速入门/标签圈群.md
@@ -2,9 +2,9 @@
 
 本章节为您介绍标签圈群。
 
-：您已经创建标签，详细参见：[新建标签模型]()。
+您已经创建标签，详细参见：[新建标签模型](/cn.zh-CN/快速入门/新建标签模型.md)。
 
-：基于标签建模的实体可进行群体圈定、发布群体和群体分析等操作。
+基于标签建模的实体可进行群体圈定、发布群体和群体分析等操作。
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
