--- a/cn.zh-CN/快速入门/添加数据处理节点.md
+++ b/cn.zh-CN/快速入门/添加数据处理节点.md
@@ -6,7 +6,7 @@
 2.  您已经新建计算资源，详细请参见[新建MaxCompute云计算资源](/cn.zh-CN/快速入门/新建MaxCompute云计算资源.md)。
 3.  您已经在Maxcompute数据库插入表[初始化语句](/cn.zh-CN/快速入门/准备工作.md)。
 
-：新建数据处理节点进行数据的加工处理。
+新建数据处理节点进行数据的加工处理。
 
 ## 添加自定义节点
 
