--- a/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md
+++ b/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md
@@ -6,8 +6,8 @@
 
 准备建表语句和插入语句以及质量校验函数：
 
--   您需要在RDS数据库准备[YHKH](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)和[XYK\_BKXX](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)表。
--   您需要在MaxCompute数据库准备表[stg\_base\_yhkh\_di](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)、[stg\_base\_xykbkjl\_di](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)、[dws\_ren\_kh\_di](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)和[dws\_wp\_xyk\_di](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)。
+-   您需要在RDS数据库准备[YHKH](#section_8yh_zzr_uuv)和[XYK\_BKXX](#section_nx1_vt3_qwt)表。
+-   您需要在MaxCompute数据库准备表[stg\_base\_yhkh\_di](#section_ek7_0vi_18t)、[stg\_base\_xykbkjl\_di](#section_mnm_zg1_qer)、[dws\_ren\_kh\_di](#section_m0z_gp7_fdl)和[dws\_wp\_xyk\_di](#section_7jy_ztt_u4e)。
 -   您需要准备质量校验函数jar包，源代码请查看[质量校验函数jar包源代码](#section_9lw_v23_dnr)。
 
 ## YHKH
