--- a/cn.zh-CN/最佳实践/数据汇聚.md
+++ b/cn.zh-CN/最佳实践/数据汇聚.md
@@ -2,13 +2,11 @@
 
 本章节为您介绍如何进行数据汇聚操作。
 
-：
-
-1.  您已经新建工作组，详细参见[新建工作组并添加成员]()。
-2.  您已经新建云计算资源，详细参见[新建MaxCompute云计算资源]()。
+1.  您已经新建工作组，详细参见[新建工作组并添加成员](/cn.zh-CN/快速入门/新建工作组并添加成员.md)。
+2.  您已经新建云计算资源，详细参见[新建MaxCompute云计算资源](/cn.zh-CN/快速入门/新建MaxCompute云计算资源.md)。
 3.  您已经在RDS数据库插入[YHKH](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)和[XYK\_BKXX](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)表和数据。
 
-：下面以MySQL到MaxCompute链路为例新增离线数据同步任务，同步RDS数据源中的数据对象[YHKH](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)和[XYK\_BKXX](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)到MaxCompute。
+下面以MySQL到MaxCompute链路为例新增离线数据同步任务，同步RDS数据源中的数据对象[YHKH](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)和[XYK\_BKXX](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)到MaxCompute。
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
