--- a/cn.zh-CN/最佳实践/数据治理/设计字段标准.md
+++ b/cn.zh-CN/最佳实践/数据治理/设计字段标准.md
@@ -2,9 +2,9 @@
 
 本章节为您介绍如何设计数据字典、质量校验函数和数据元。
 
-：您已新建云计算资源，详细参见：[新建MaxCompute云计算资源]()。
+您已新建云计算资源，详细参见：[添加MaxCompute云计算资源](/cn.zh-CN/最佳实践/准备工作/新建云计算资源.md)。
 
-：定义数据标准为数据模型设计做准备。
+定义数据标准为数据模型设计做准备。
 
 ## 新建数据字典并物理化
 
