--- a/cn.zh-CN/最佳实践/数据治理/设计数据模型.md
+++ b/cn.zh-CN/最佳实践/数据治理/设计数据模型.md
@@ -2,12 +2,10 @@
 
 本章节为您介绍设计数据模型。
 
-：
-
 -   您已定义数据标准，请参见：[设计字段标准](/cn.zh-CN/最佳实践/数据治理/设计字段标准.md)。
 -   您已经在MaxCompute创建表[stg\_base\_yhkh\_di](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)。
 
-：设计数据模型并且物理化为添加数据处理节点做准备。
+设计数据模型并且物理化为添加数据处理节点做准备。
 
 ## 新建数据层
 
