--- a/cn.zh-CN/最佳实践/数据治理/添加公共节点数据加工.md
+++ b/cn.zh-CN/最佳实践/数据治理/添加公共节点数据加工.md
@@ -2,9 +2,9 @@
 
 本章节为您介绍如何添加公共节点进行数据加工。
 
-：您已经新建数据模型，详细请参见：[设计数据模型](/cn.zh-CN/最佳实践/数据治理/设计数据模型.md)。
+您已经新建数据模型，详细请参见：[设计数据模型](/cn.zh-CN/最佳实践/数据治理/设计数据模型.md)。
 
-：可以对逻辑表添加公共节点进行数据的加工，使数据变成符合标准的数据。
+可以对逻辑表添加公共节点进行数据的加工，使数据变成符合标准的数据。
 
 ## 添加公共节点并发布版本
 
