--- a/cn.zh-CN/最佳实践/资产运营与管理/资产编目和上线.md
+++ b/cn.zh-CN/最佳实践/资产运营与管理/资产编目和上线.md
@@ -2,9 +2,9 @@
 
 本章节为您介绍创建资产目录和上线标签资产的操作。
 
-：您已完成上线标签，请参见[上线标签]()。
+您已完成上线标签，请参见[上线标签](/cn.zh-CN/最佳实践/资产运营与管理/语义建模.md)。
 
-：所有资产编目和上线成功后才可以对外提供申请使用功能。
+所有资产编目和上线成功后才可以对外提供申请使用功能。
 
 ## 创建资产目录
 
