--- a/cn.zh-CN/最佳实践/数据汇聚.md
+++ b/cn.zh-CN/最佳实践/数据汇聚.md
@@ -8,6 +8,8 @@
 
 下面以MySQL到MaxCompute链路为例新增离线数据同步任务，同步RDS数据源中的数据对象[YHKH](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)和[XYK\_BKXX](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)到MaxCompute。
 
+## 操作步骤
+
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
 2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **资产加工** \> **![数据同步](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7051429061/p203665.png)**图标，进入数据同步页面。
