--- a/cn.zh-CN/最佳实践/数据加工.md
+++ b/cn.zh-CN/最佳实践/数据加工.md
@@ -1,12 +1,12 @@
 # 数据加工
 
-本章节为您介绍如何添加自定义节点并且编排场景进行数据加工。
+本章节为您介绍如何添加自定义计算节点并且编排场景进行数据加工。
 
 您已经新建数据模型，详细参：[设计数据模型](/cn.zh-CN/最佳实践/数据治理/设计数据模型.md)。
 
-可以对逻辑表进行新建自定义ETL节点进行数据的加工流编排。
+可以对逻辑表进行新建自定义ETL节点编排场景进行数据加工。
 
-## 添加公共节点并发布版本
+## 添加计算节点并发布版本
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
