--- a/cn.zh-CN/最佳实践/准备工作/用户管理.md
+++ b/cn.zh-CN/最佳实践/准备工作/用户管理.md
@@ -4,6 +4,8 @@
 
 您已经[购买数据资源平台](https://common-buy.aliyun.com/?commodityCode=drp_basic_public_cn#/buy)。
 
+给账号添加不同的角色有不同的操作权限。
+
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
 2.  在页面右上角单击**账号** \> **系统设置** \> **用户管理**。
