--- a/cn.zh-CN/快速入门/添加数据处理节点.md
+++ b/cn.zh-CN/快速入门/添加数据处理节点.md
@@ -8,7 +8,7 @@
 
 新建数据处理节点进行数据的加工处理。
 
-## 添加自定义节点
+## 添加计算节点
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
@@ -91,7 +91,7 @@
     ![查看节点](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1889060161/p207477.png)
 
 
-## 公共节点运行后的数据探查
+## 计算节点运行后的数据探查
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
