--- a/cn.zh-CN/快速入门/标签圈群.md
+++ b/cn.zh-CN/快速入门/标签圈群.md
@@ -6,6 +6,8 @@
 
 基于标签建模的实体可进行群体圈定、发布群体和群体分析等操作。
 
+## 操作步骤
+
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
 2.  在页面顶部左上角，单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)** \> **数据资产中心** \> **资产应用** \> **画像分析**。
