--- a/cn.zh-CN/快速入门/新建标签模型.md
+++ b/cn.zh-CN/快速入门/新建标签模型.md
@@ -9,6 +9,8 @@
 
 语义建模主要为您介绍新建标签模型，为之后的标签圈群做支撑。
 
+## 操作步骤
+
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
 2.  在顶部菜单栏单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)** \> **研发工作台** \> **资产加工** \> **![语义建模](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0867900161/p208221.png)**，进入语义建模页面。
