--- a/cn.zh-CN/最佳实践/数据治理/治理前模型质量检测.md
+++ b/cn.zh-CN/最佳实践/数据治理/治理前模型质量检测.md
@@ -29,7 +29,7 @@
 
 7.  单击任务后的**详情**，查看质量检测详情。
 
-    结果分析：性别、教育水平、婚姻状况、职业不在标准字典值、手机号码质量校验函数不符合规则，STG层-ODS需要做标准化动作，详细操作见[添加公共节点数据加工](/cn.zh-CN/最佳实践/数据治理/添加公共节点数据加工.md)。
+    结果分析：性别、教育水平、婚姻状况、职业不在标准字典值、手机号码质量校验函数不符合规则，STG层-ODS需要做标准化动作，详细操作见[添加计算节点数据加工](/cn.zh-CN/最佳实践/数据治理/添加计算节点数据加工.md)。
 
     ![质量结果查看](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7267900161/p208427.png)
 
