--- a/cn.zh-CN/用户指南/数据资产中心/画像分析/标签圈群/标签展示设置.md
+++ b/cn.zh-CN/用户指南/数据资产中心/画像分析/标签圈群/标签展示设置.md
@@ -4,6 +4,8 @@
 
 已生成圈选结果。
 
+## 操作步骤
+
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
 2.  在顶部菜单栏左上角，单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**图标，选择**数据资产中心**。
