--- a/cn.zh-CN/用户指南/数据资产中心/画像分析/标签圈群/发布群体.md
+++ b/cn.zh-CN/用户指南/数据资产中心/画像分析/标签圈群/发布群体.md
@@ -14,6 +14,8 @@
 
 以下以静态群体为例。
 
+## 操作步骤
+
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
 2.  在顶部菜单栏左上角，单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**图标，选择**数据资产中心**。
@@ -27,8 +29,6 @@
     ![发布群体](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9617160161/p212048.png)
 
     1.  进入**选择群体标签**页面，勾选要展示的标签，单击**下一步**。
-
-        ![选择标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7903950161/p212046.png)
 
     2.  核对信息无误后，单击**保存**。
 
