--- a/cn.zh-CN/用户指南/数据资产中心/画像分析/群体管理/群体分析.md
+++ b/cn.zh-CN/用户指南/数据资产中心/画像分析/群体管理/群体分析.md
@@ -6,6 +6,8 @@
 
 可实现单群体或实体关系按单个度量方式的多个维度分析，并可以将分析结果保存到本地作为分析模板使用，还可以下载分析报表。
 
+## 操作步骤
+
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
 2.  在顶部菜单栏左上角，单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**图标，选择**数据资产中心**。
