--- a/cn.zh-CN/用户指南/数据资产中心/画像分析/群体管理/群体变更来源.md
+++ b/cn.zh-CN/用户指南/数据资产中心/画像分析/群体管理/群体变更来源.md
@@ -6,6 +6,8 @@
 
 对实时群体状态变更为动态和静态群体，以下以变更为静态群体为例说明。
 
+## 操作步骤
+
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
 2.  在顶部菜单栏左上角，单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**图标，选择**数据资产中心**。
