--- a/cn.zh-CN/产品简介/什么是数据资源平台.md
+++ b/cn.zh-CN/产品简介/什么是数据资源平台.md
@@ -11,7 +11,7 @@
     -   **标准建模：**帮助用户管理数据标准和构建数据模型，将数据标准贯彻到数据质量分析、保障及检查的全过程中，将散乱的多源异构数据加工成标准、干净的数据资产，确保数据标准建模的完整性、一致性、准确性、可用性，通过客观量化评估指标帮助客户了解数据治理工作进程，指引数据治理工作的螺旋式上升过程。为了完成在云上积累可运营数研发工作台据资源的目标，提供数据充分融合、数据高质量可用的必要保障。
     -   **表加工：**提供通用的代码编辑页面，灵活地进行个性化的数据编码研发，完成任务的发布，基于场景的编排。
     -   **算法服务：**提供算法综合管理平台，通过对算法部署、接入、调试、调用等过程的一体化管理， 算法服务实现算法与应用的解耦、算法复用。应用可以基于标准化产品的统一接口快速封装解决方案，提高算法工程化效率。
-    -   **语义建模：**提供算法综合管理平台，通过对算法部署、接入、调试、调用等过程的一体化管理，实现算法与应用的解耦、算法复用。应用可以基于标准化产品的统一接口快速封装解决方案，提高算法工程化效率。
+    -   **语义建模：**可将治理后的数据以业务化视角进行建模、查看、管理及使用，并提供业务衍生标签的自定义功能，为上层应用提供统一的标签数据目录和标签调用接口，沉淀上层应用制作的模型标签，实现高价值标签共享复用，形成标签运营生态。
     -   **质量评估：**根据数据模型中相关质量规则，设置并执行质量检测任务，获取质量评估量规则运行结果，实现对数据质量的全方位评估，并通过数据质量监控报告展现数仓中各层级数据的质量情况。
     -   **解决方案：**提供对数据标准、模型等内容的统一跨项目导入导出操作，便于进行数据标准、模型、ETL代码的跨项目复用，帮助用户快速完成数据治理工作的初始化。
 -   **资产运营**
