--- a/cn.zh-CN/用户指南/语义建模/标签工厂/标签方案/新建标签方案.md
+++ b/cn.zh-CN/用户指南/语义建模/标签工厂/标签方案/新建标签方案.md
@@ -4,7 +4,7 @@
 
 实体或关系上已绑定云计算资源上的表生成标签。
 
-标签方案定义衍生标签的需求逻辑，包括标签方案的类型、标签配置、调度配置、参数配置，其中重点是标签配置。用户在制作衍生标签时需要明确标签的生成逻辑是什么，根据已有标签做什么样的运算，生成的结果字段哪个对应为新的标签，要关联的标签对象是哪个，标签任务的调度类型支持立即运行的调度或者周期调度。标签的生成逻辑支持通过TQL表达，支持常用的函数、逻辑表达式等。支持的云计算资源有MaxCompute和RDS。
+在制作衍生标签时需要明确标签的生成逻辑是什么，根据已有标签做什么样的运算，生成的结果字段哪个对应为新的标签，要关联的标签对象是哪个，标签任务的调度类型支持立即运行的调度或者周期调度。
 
 ## 操作步骤
 
@@ -30,15 +30,15 @@
 
         ![标签配置](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1867900161/p204889.png)
 
-        对返回标签新建标签：单击**绑定标签名**下的**新建标签**，填写标签名称、code、描述和业务口径，单击**完成**。
+        对返回标签新建标签：单击**绑定标签名**下的**新建标签**，填写标签名称、标签code、描述和业务口径等，单击**完成**。
 
         ![新建标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1867900161/p204891.png)
 
-        在**绑定标签名**下可查看新建标签。单击页面右上角**![下一步](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6323117951/p120840.png)**。
+        在**绑定标签名**下可查看新建标签。单击页面右上角**![下一步](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6323117951/p120840.png)**图标。
 
-    2.  进入**离线任务配置**，选择调度类型为：一次性调度，单击页面右上角**![下一步](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6323117951/p120840.png)**。
+    2.  进入**离线任务配置**，选择调度类型为：一次性调度，单击页面右上角**![下一步](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6323117951/p120840.png)**图标。
 
-    3.  进入**预览保存**页面，可以查看标签方案配置信息，单击**![保存](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6323117951/p120841.png)**。
+    3.  进入**预览保存**页面，可以查看标签方案配置信息，单击**![保存](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6323117951/p120841.png)**图标。
 
         ![预览方案](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1867900161/p204898.png)
 
@@ -48,14 +48,12 @@
 
 6.  选择新建的标签方案，单击**提交**，等待标签方案**状态**变为**已提交**。
 
-7.  选择新建的标签方案，单击**执行**，弹出**运行参数配置**，选择**立即运行**，单击**确定**。
+7.  选择新建的标签方案，单击**执行**，在**运行参数配置**页面，选择**立即运行**，单击**确定**。
 
 8.  选择新建的标签方案，单击**任务**，页面跳转到**任务列表**，等待任务**状态**变为**成功**。
 
     ![任务查看](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1867900161/p204906.png)
 
-9.  单击左侧导航栏**标签模型** \> **![进入](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188815.png)**，进入对象视图页面，单击衍生标签绑定的对象后的**详情**页面，查看新建的衍生标签。
-
-    ![查看衍生](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2867900161/p204907.png)
+9.  单击左侧导航栏**标签模型** \> **![进入](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188815.png)**，进入对象视图页面，单击衍生标签绑定的对象后面的**详情**，查看新建的衍生标签。
 
 
