--- a/cn.zh-CN/用户指南/数据标准/字段标准设计/数据元管理/查看数据元详情.md
+++ b/cn.zh-CN/用户指南/数据标准/字段标准设计/数据元管理/查看数据元详情.md
@@ -16,7 +16,7 @@
 
 5.  在**数据元管理**页面，单击**查看**，进入数据元详情页面。
 
-6.  单击**数据元详情**，查看数据元基础信息和与域值设置相关信息。
+6.  单击**数据元详情**，查看数据元基础信息和域值设置相关信息。
 
     ![查看数据元详情](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8666160161/p212864.png)
 
