--- a/cn.zh-CN/常见问题/画像分析.md
+++ b/cn.zh-CN/常见问题/画像分析.md
@@ -28,5 +28,5 @@ keyword: [分析, 群体圈群, 群体, 圈群]
 
 ## 是否支持把分析的图表授权给其他人查看？
 
-支持。操作详见[我的分析报告]()。
+支持。操作详见[我的分析报告](/cn.zh-CN/用户指南/数据资产中心/画像分析/群体画像/我的分析报告.md)。
 
