--- a/cn.zh-CN/用户指南/运营工作台/资产管理/资产目录.md
+++ b/cn.zh-CN/用户指南/运营工作台/资产管理/资产目录.md
@@ -4,6 +4,8 @@
 
 已创建工作组。
 
+## 操作步骤
+
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
 2.  在左侧选择**运营工作台**，在顶部菜单栏单击**资产管理**，在左侧导航栏单击**资产目录管理**。
