--- a/cn.zh-CN/快速入门/创建阿里云账号.md
+++ b/cn.zh-CN/快速入门/创建阿里云账号.md
@@ -31,20 +31,44 @@
 -   如果您只需本人使用数据资源平台产品，请根据[t16174.md\#]()的操作准备好您的账号，并跳过此章节进行后续操作。
 -   如果您计划邀请其他用户协作使用数据资源平台，请您根据以下操作准备RAM子账号。
 
-1.  使用阿里云账号登录[RAM控制台](https://ram.console.aliyun.com/)。
+1.  使用超级管理员角色的账号（主账号），登录[RAM控制台](https://ram.console.aliyun.com/overview)。
 
-2.  在左侧导航栏的**人员管理**菜单下，单击**用户**。
+2.  创建RAM用户。
 
-3.  单击**新建用户**。
+    1.  在**RAM 访问控制**页面，单击左侧导航栏的**人员管理** \> **用户**。
 
-    **说明：** 单击**添加用户**，可一次性创建多个RAM用户。
+    2.  在**用户**页面，单击**创建用户**。
 
-4.  输入**登录名称**和**显示名称**。
+    3.  在**创建用户**页面，输入**登录名称**和**显示名称**。
 
-5.  在**访问方式**区域下，选择**控制台访问**。
+        |参数|描述|
+        |--|--|
+        |**登录名称**|登录名称由字母、数字、英文句号（.）、下划线（\_）或短划线（-）组合组成。**说明：** **登录名称**不能超过64个字符。 |
+        |**显示名称**|显示名称由字符或汉字组合组成。**说明：** **显示名称**不能超过24个字符。 |
 
-6.  单击**确定**。
+        为了保障账号安全，建议仅为RAM用户选择一种登录方式，避免RAM用户离开组织后仍可以通过密钥访问阿里云资源。在**访问方式**区域下，选择**控制台访问**或**编程访问**：
+
+        -   如果您选择了**控制台访问**，则需要配置**控制台密码**、**要求重置密码**和**多因素认证**。系统支持通过用户的账号和密码访问阿里云控制台。
+        -   如果您选择了**编程访问**，则需要启用AccessKey ID和AccessKey Secret。系统支持通过API或其他开发工具访问阿里云控制台。
+    4.  单击**确定**，完成RAM用户的创建。
 
 
 **说明：** RAM用户创建完成后，务必保存用户名和登录密码，并将其告知子账号。
+
+## 配置AccessKey
+
+1.  使用主账号，登录[阿里云控制台](https://homenew.console.aliyun.com/)。
+
+2.  在阿里云控制台页面，鼠标悬停至右上方的用户图像，单击**AccessKey管理**。
+
+    ![test](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8506816951/p135903.png)
+
+3.  在**安全提示**对话框中，选择**继续使用AccessKey**，为主账号创建AccessKey。
+
+    如果选择**开始使用子用户AccessKey**，则系统进入创建子账号页面，您可以为子账号创建AccessKey。
+
+4.  在**安全信息管理**页面，单击**创建AccessKey**。
+
+5.  在**手机验证**对话框，填写**校验码**，单击**确定**。
+
 
