--- a/cn.zh-CN/产品简介/功能特性/运营工作台/资产注册.md
+++ b/cn.zh-CN/产品简介/功能特性/运营工作台/资产注册.md
@@ -2,5 +2,5 @@
 
 资产注册功能是数据资源平台资产管理的基础。
 
-支持平台侧需管理的数据资产注册功能，用可选择需要管理的数据资产来源作为管理输入，支持对多个数据源端进行展现订阅；可定期自动订阅数据表、标签等资产的信息。
+支持平台侧需管理的数据资产注册功能，用户可选择需要管理的数据资产来源作为管理输入，支持对多个数据源端进行展现订阅；可定期自动订阅数据表、标签等资产的信息。
 
