--- a/cn.zh-CN/用户指南/运营工作台/资产管理/表资产管理.md
+++ b/cn.zh-CN/用户指南/运营工作台/资产管理/表资产管理.md
@@ -12,7 +12,7 @@
 
 3.  在资产对象管理页面，选择需要编目的资产对象，单击**修改目录**。
 
-4.  在修改类目页面，单击**添加所属类目**选择已新增所属目录，操作完成后单击**确定**。
+4.  在修改类目页面，单击**添加所属目录**选择已新增所属目录，操作完成后单击**确定**。
 
     ![表资产对象管理](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2303950161/p211877.png)
 
@@ -20,7 +20,7 @@
 
     -   单击**上线**，可在资产目录中查看到已上线的表资产。
     -   单击**下线**，下线已上线的表资产。
-    -   选择多条需要编目的表资产，单击**批量修改目录**，在修改类目页面，单击**添加所属类目**选择已新增所属目录，操作完成后单击**确定**。
+    -   选择多条需要编目的表资产，单击**批量修改目录**，在修改类目页面，单击**添加所属目录**选择已新增所属目录，操作完成后单击**确定**。
     -   选择多条需要上线的表资产，单击**批量上线**，单击**批量上线**。
     -   选择多条需要下线的表资产，单击**批量下线**，单击**批量下线**。
 
