--- a/cn.zh-CN/最佳实践/资产运营与管理/资产编目和上线.md
+++ b/cn.zh-CN/最佳实践/资产运营与管理/资产编目和上线.md
@@ -47,7 +47,7 @@
 
 2.  在顶部菜单栏单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)** \> **运营工作台** \> **资产管理**，进入资产管理页面。
 
-3.  在左侧导航栏**资产对象管理** \> **标签资产管理**，勾选所有标签名称，单击**修改类目**，弹出**修改提示**页面，单击**确认**。
+3.  在左侧导航栏**资产对象管理** \> **标签资产管理**，勾选所有标签名称，单击**批量修改目录**，弹出**修改提示**页面，单击**确认**。
 
     勾选标签名称配置：
 
@@ -55,11 +55,11 @@
     |----|
     |银行客户|
 
-4.  弹出**修改类目**页面，单击**+添加所属类目**，操作完成后单击**确定**，页面显示操作成功。
+4.  弹出**修改目录**页面，单击**+添加所属目录**，操作完成后单击**确定**，页面显示操作成功。
 
     所属自定义目录配置：
 
-    |所属类目|
+    |所属目录|
     |----|
     |部门/公司银行部|
 
