--- a/cn.zh-CN/常见问题/系统设置.md
+++ b/cn.zh-CN/常见问题/系统设置.md
@@ -6,7 +6,8 @@ keyword: [成员管理, 全员管理]
 
 本文为您介绍系统设置的相关问题。
 
-[账号都支持那些角色，每个角色都有哪些权限？](#section_l4t_jn7_d5p)
+1.  [账号都支持那些角色，每个角色都有哪些权限？](#section_l4t_jn7_d5p)
+2.  [新建云计算资源怎么获取白名单IP?](#section_ptp_kvj_7qv)
 
 ## 账号都支持那些角色，每个角色都有哪些权限？
 
@@ -15,4 +16,12 @@ keyword: [成员管理, 全员管理]
 租户支持的角色：包括租户管理员、租户访客、租户数据资产管理员、租户运维人员。
 
 所有的角色权限，请查看产品页面右上角**账号** \> **系统配置** \> **权限列表**。
+
+## 新建云计算资源怎么获取白名单IP?
+
+1.您可以单击产品页面右上角**账号** \> **系统配置** \> **工作组管理**。
+
+2.单击目标工作组后面的**云计算资源** \> **新建云计算资源**，资源存储类型选择**ApsaraDB for RDS**，单击后面的**![查看](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6495121161/p228757.png)**查看白名单IP列表。
+
+![查看IP](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6495121161/p228758.png)
 
