--- a/cn.zh-CN/用户指南/语义建模/标签模型/标签模型.md
+++ b/cn.zh-CN/用户指南/语义建模/标签模型/标签模型.md
@@ -29,6 +29,12 @@
 
     4.  单击**未绑定字段**，选中所有字段，选择其中一个字段为主标签，单击**![开启主标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0867900161/p204602.png)**按钮开启主标签，单击**修改自定义属性**，填写所有标签业务口径和使用方，单击**确定**，所有操作完成后单击**确认** 。
 
+        **说明：**
+
+        实体绑定同一数据源上的多张表时，需要确保多张表的主标签的内容一致才可进行join查询。
+
+        -   设置主表：按主表的left join查询。
+        -   不设置主表：按inner join查询。
 7.  新建关系并绑表：
 
     1.  单击**新建对象**，选择**关系**，填写关系名称、关系code、主题类目、选择图标和描述（选填）单击**确定**。
