--- a/cn.zh-CN/用户指南/语义建模/标签工厂/新建标签方案.md
+++ b/cn.zh-CN/用户指南/语义建模/标签工厂/新建标签方案.md
@@ -18,6 +18,8 @@
 
     1.  在**标签配置**页面，选择源和目标云计算资源，在查询编辑器里面输入TQL语句，单击**TQL测试**。
 
+        **说明：** select 后面需带绑定对象的主标签才可开启输出表关联标签。
+
         测试通过，可查看**数据结果**table格式。
 
         -   单击**返回JSON**，查看数据结果JSON格式。
