--- a/cn.zh-CN/最佳实践/语义建模与画像分析/语义建模.md
+++ b/cn.zh-CN/最佳实践/语义建模与画像分析/语义建模.md
@@ -2,7 +2,7 @@
 
 本章节为您介绍语义建模的所有操作。
 
-1.  您已经新建工作组，详细请参见[新建工作组并添加成员]()。
+1.  您已经新建工作组，详细请参见[新建工作组并添加成员](/cn.zh-CN/快速入门/新建工作组并添加成员.md)。
 2.  您已经新建计算资源，详细请参见[新建云计算资源](/cn.zh-CN/最佳实践/准备工作/新建云计算资源.md)。
 3.  您已经在MaxCompute数据库插入表[dws\_ren\_kh\_di](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)和[dws\_wp\_xyk\_di](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)。
 
@@ -89,6 +89,12 @@
         |使用方|营销部|
         |普通标签|表上其他字段|
 
+        **说明：**
+
+        实体绑定同一数据源上的多张表时，需要确保多张表的主标签的内容一致才可进行join查询。
+
+        -   设置主表：按主表的left join查询。
+        -   不设置主表：按inner join查询。
     7.  出现**提示**页面，单击**返回对象详情**。
 
 7.  新建实体连接：
@@ -137,6 +143,8 @@
         ```
         select count(xyk.cid) as 数量,xyk.rid as 证件号from xyk group by xyk.rid;
         ```
+
+        **说明：** select 后面需带绑定对象的主标签才可开启输出表关联标签。
 
         测试通过，可查看**数据结果**table格式。
 
