--- a/cn.zh-CN/用户指南/语义建模/标签模型/查看详情/标签编辑值码表.md
+++ b/cn.zh-CN/用户指南/语义建模/标签模型/查看详情/标签编辑值码表.md
@@ -4,7 +4,8 @@
 
 设置标签值类型为枚举值并获取值码表信息。
 
-标签编辑值码表支持手动和物理表绑定2种方式。
+-   标签编辑值码表支持手动和物理表绑定2种方式。
+-   值码表支持OLAP类关系型数据库，包括RDS、ADS、Oracle、SQL Server、PostgreSQL。
 
 ## 操作步骤
 
