--- a/cn.zh-CN/用户指南/数据标准/模型标准设计/逻辑表命名规则/新建逻辑表命名规则.md
+++ b/cn.zh-CN/用户指南/数据标准/模型标准设计/逻辑表命名规则/新建逻辑表命名规则.md
@@ -8,11 +8,11 @@
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在菜单栏左上角，单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**图标，选择**研发工作台**。
+2.  在界面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**图标，选择**研发工作台**，单击顶部菜单的**资产加工**。
 
-3.  单击**资产加工** \> **![数据标准](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6358100161/p208862.png)** \> **模型标准设计** \> **模型命名属性** \> **逻辑表命名规则**。
+3.  在左侧导航栏单击**![数据标准](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6358100161/p208862.png)** \> **模型标准设计** \> **逻辑表命名规则**。
 
-4.  单击**![进入](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188815.png)**图标，进入逻辑表命名规则页面。
+4.  鼠标悬浮在**逻辑表命名规则**上并单击**![进入](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188815.png)**图标，进入逻辑表命名规则页面。
 
 5.  单击**新建逻辑表命名规则**，输入规则名称、规则描述、选择生效范围和设计规则等信息后，单击**确定**。
 
