--- a/cn.zh-CN/用户指南/数据标准/模型标准设计/逻辑表命名规则/编辑逻辑表命名规则.md
+++ b/cn.zh-CN/用户指南/数据标准/模型标准设计/逻辑表命名规则/编辑逻辑表命名规则.md
@@ -10,7 +10,7 @@
 
 2.  在菜单栏左上角，单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**图标，选择**研发工作台**。
 
-3.  单击**资产加工** \> **![数据标准](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6358100161/p208862.png)** \> **模型标准设计** \> **模型命名属性** \> **逻辑表命名规则**。
+3.  单击**资产加工** \> **![数据标准](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6358100161/p208862.png)** \> **模型标准设计** \> **逻辑表命名规则**。
 
 4.  单击**![进入](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188815.png)**图标，进入逻辑表命名规则页面。
 
