--- a/cn.zh-CN/用户指南/数据标准/字段标准设计/指标管理/删除指标数据元.md
+++ b/cn.zh-CN/用户指南/数据标准/字段标准设计/指标管理/删除指标数据元.md
@@ -16,8 +16,8 @@
 
 5.  在**指标管理**页面，勾选一个或者多个需要删除的指标数据元，单击**删除**。
 
-6.  在删除提醒页面，单击**确认**，完成删除。
+6.  在删除提醒页面，单击**确定**，完成删除。
 
-    ![删除](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0966160161/p212707.png)
+    ![删除指标数据元](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5370640261/p271227.png)
 
 
