--- a/cn.zh-CN/用户指南/数据标准/字段标准设计/指标管理/查看指标数据元详情.md
+++ b/cn.zh-CN/用户指南/数据标准/字段标准设计/指标管理/查看指标数据元详情.md
@@ -16,6 +16,6 @@
 
 5.  在**指标管理**页面，选择需要查看的指标数据元，单击**查看**。
 
-    ![查看指标管理](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7966160161/p212897.png)
+    ![查看指标详情](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3170640261/p271234.png)
 
 
