--- a/cn.zh-CN/用户指南/数据标准/字段标准设计/指标属性管理/查看指标属性详情.md
+++ b/cn.zh-CN/用户指南/数据标准/字段标准设计/指标属性管理/查看指标属性详情.md
@@ -4,6 +4,8 @@
 
 已创建指标属性。
 
+支持查看详情、关联信息和操作日志。
+
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
 2.  在菜单栏左上角，单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台**。
@@ -14,6 +16,6 @@
 
 5.  选择需要查看的指标属性，单击**查看**。
 
-    ![查看指标属性](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4176160161/p212823.png)
+    ![查看指标属性详情](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0360640261/p271263.png)
 
 
