--- a/cn.zh-CN/用户指南/数据标准/全局设置/业务应用.md
+++ b/cn.zh-CN/用户指南/数据标准/全局设置/业务应用.md
@@ -28,7 +28,7 @@
 
 6.  新建完成后，可对新建的所属应用进行如下操作。
 
-    -   详情：单击**详情**，可查看所属应用的详情信息。
-    -   编辑：选中需要编辑的所属应用，单击**编辑**，修改所属应用名称、标识或描述信息后，单击**确认**。
-    -   删除：选中需要删除的所属应用，单击**删除**，在删除提示页面，单击**确认**，删除所属应用。
+    -   详情：单击业务应用所在行的**详情**，可查看所属应用的详情信息。
+    -   编辑：单击业务应用所在行的**编辑**，修改所属应用名称或描述信息后，单击**确认**。
+    -   删除：单击业务应用所在行的**删除**，在删除提示页面，单击**确认**，删除所属应用。
 
