--- a/cn.zh-CN/用户指南/数据标准/全局设置/数据域.md
+++ b/cn.zh-CN/用户指南/数据标准/全局设置/数据域.md
@@ -12,9 +12,9 @@
 
 4.  新建目录。
 
-    1.  将鼠标移至数据元，单击**![新建目录](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2521067061/p188899.png)**图标，选择**新建目录**。
+    1.  将鼠标移至数据域，单击**![新建目录](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2521067061/p188899.png)**图标，选择**新建目录**。
 
-    2.  在**新建目录**页面，根据提示输入名字 、标识和描述后，单击**确认**。
+    2.  在**新建数据域目录**页面，根据提示输入名字 、标识和描述后，单击**确认**。
 
         **说明：** 完成新建后，您可以对新建目录进行**编辑**和**删除**操作。
 
@@ -28,7 +28,7 @@
 
 6.  新建完成后，可对新建的数据域进行如下操作。
 
-    -   详情：单击**详情**，可查看数据域的详情信息。
-    -   编辑：选中需要编辑的数据域，单击**编辑**，修改数据域名称、标识或描述信息后，单击**确认**。
-    -   删除：选中需要删除的数据域，单击**删除**，在删除提示页面，单击**确认**，删除数据域。
+    -   详情：单击数据域所在行的**详情**，可查看数据域的详情信息。
+    -   编辑：单击数据域所在行的**编辑**，修改数据域名称或描述信息后，单击**确认**。
+    -   删除：单击数据域所在行的**删除**，在删除提示页面，单击**确认**，删除数据域。
 
