--- a/cn.zh-CN/用户指南/语义建模/标签模型/标签模型.md
+++ b/cn.zh-CN/用户指南/语义建模/标签模型/标签模型.md
@@ -27,7 +27,7 @@
 
     3.  在已绑定数据表页面，单击**新增绑表**，选择数据源名称和表名。
 
-    4.  单击**未绑定字段**，选中所有字段，选择其中一个字段为主标签，单击**![开启主标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0867900161/p204602.png)**按钮开启主标签，单击**修改自定义属性**，填写所有标签业务口径和使用方，单击**确定**，所有操作完成后单击**确认** 。
+    4.  单击**未绑定字段**，选中所有字段，选择其中一个字段为主标签，单击**![开启主标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0867900161/p204602.png)**按钮开启主标签 。
 
         **说明：**
 
@@ -35,6 +35,10 @@
 
         -   设置主表：按主表的left join查询。
         -   不设置主表：按inner join查询。
+    5.  若在右上角单击**自定义设置**，添加了其他属性，可单击**修改自定义属性**，批量填写所有标签自定义的属性，单击**确定**。
+
+    6.  所有操作完成后，单击**确认**。
+
 7.  新建关系并绑表：
 
     1.  单击**新建对象**，选择**关系**，填写关系名称、关系code、主题类目、选择图标和描述（选填）单击**确定**。
@@ -43,7 +47,11 @@
 
     3.  单击**新增绑表**，选择云计算资源和表名。
 
-    4.  单击**未绑定字段**，选中所有字段，选择其中一个字段为主标签，单击**![开启主标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0867900161/p204602.png)**按钮开启主标签，单击**修改自定义属性**，填写所有标签业务口径和使用方，单击**确定**，所有操作完成后单击**确认** 。
+    4.  单击**未绑定字段**，勾选所有字段，选择其中一个字段为主标签，单击**![开启主标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0867900161/p204602.png)**按钮开启主标签。
+
+    5.  若在右上角单击**自定义设置**，添加了其他属性，可单击**修改自定义属性**，批量填写所有标签自定义的属性，单击**确定**。
+
+    6.  所有操作完成后，单击**确认**。
 
 8.  关联对象与对象。
 
