--- a/cn.zh-CN/用户指南/语义建模/标签模型/绑表管理.md
+++ b/cn.zh-CN/用户指南/语义建模/标签模型/绑表管理.md
@@ -2,7 +2,7 @@
 
 本章节为您介绍实体或关系绑表管理。
 
-实体或关系绑表成功。
+已创建实体或关系。
 
 ## 操作步骤
 
@@ -16,7 +16,7 @@
 
 5.  在**对象视图**页面，单击某个实体或关系对象后面的**绑表管理**，进行新增绑表、编辑绑表、解绑表。
 
-    -   新增绑表：在已绑定数据表页面，单击**新增绑表**，选择数据源名称和表名，单击**未绑定字段**，选中所有字段，选择其中一个字段为主标签，单击**![开启主标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0867900161/p204602.png)**按钮开启主标签，单击**修改自定义属性**，填写所有标签业务口径和使用方，单击**确定**，所有操作完成后，单击**确认**。
+    -   新增绑表：在**已绑定数据表**页面，单击**新增绑表**，选择**数据源名称**和**表名**，单击**未绑定字段**，勾选所有字段，并选择其中一个字段为主标签，单击**![开启主标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0867900161/p204602.png)**按钮，开启主标签。若有设置自定义全局属性，单击**修改自定义属性**，批量填写属性信息，操作完成后，单击**确认**。
 
         ![绑表](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4775140161/p211948.png)
 
