--- a/cn.zh-CN/用户指南/语义建模/标签模型/查看详情/新建标签.md
+++ b/cn.zh-CN/用户指南/语义建模/标签模型/查看详情/新建标签.md
@@ -18,7 +18,7 @@
 
 5.  在**对象视图**页面，单击某个实体或关系后面的**详情**，在标签列表区域，单击**新建标签**。
 
-6.  在新增标签页面，选择**原生标签**，根据提示信息，对标签code、标签名称、值类型、业务口径和使用方等输入或选择后，单击**确定**。
+6.  在新增标签页面，选择**原生标签**，根据提示信息，对标签code、标签名称、值类型、其他属性等输入后，单击**确定**。
 
     ![新建标签](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4739430161/p211954.png)
 
