--- a/cn.zh-CN/用户指南/语义建模/标签模型/编辑对象.md
+++ b/cn.zh-CN/用户指南/语义建模/标签模型/编辑对象.md
@@ -14,8 +14,14 @@
 
 4.  单击**![进入](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188815.png)**图标，进入标签模型页面。
 
-5.  在**对象视图**页面，单击某个对象后面的**编辑**，修改实体名称或主题目录等信息后，单击**确定**。
+5.  在**对象视图**页面，单击某个对象后面的**编辑**，修改基础信息或对象之间的关联关系。
 
     ![编辑实体](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4036140161/p211938.png)
+
+    1.  修改实体名称或主题目录。
+
+    2.  单击**连接**，根据实际需求修改关联信息，详细请参见[新建连接](/cn.zh-CN/用户指南/语义建模/标签模型/查看详情/新建连接.md)。
+
+    3.  修改完成后，单击**确定**。
 
 
