--- a/cn.zh-CN/用户指南/语义建模/标签工厂/新建标签方案.md
+++ b/cn.zh-CN/用户指南/语义建模/标签工厂/新建标签方案.md
@@ -38,7 +38,7 @@
 
         在**绑定标签名**下可查看新建标签。单击页面右上角**![下一步](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6323117951/p120840.png)**图标。
 
-    2.  进入**离线任务配置**，选择调度类型为：一次性调度，单击页面右上角**![下一步](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6323117951/p120840.png)**图标。
+    2.  进入**离线任务配置**，选择调度类型为：**一次性调度**或**周期调度**，单击页面右上角**![下一步](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6323117951/p120840.png)**图标。
 
     3.  进入**预览保存**页面，可以查看标签方案配置信息，单击**![保存](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6323117951/p120841.png)**图标。
 
@@ -48,14 +48,14 @@
 
     ![查看方案](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1867900161/p204900.png)
 
-6.  选择新建的标签方案，单击**提交**，等待标签方案**状态**变为**已提交**。
+6.  选择新建的标签方案，单击**提交**。
 
-7.  选择新建的标签方案，单击**执行**，在**运行参数配置**页面，选择**立即运行**，单击**确定**。
+7.  等待标签方案状态变为**已提交**，单击**执行**，在**运行参数配置**页面，选择**立即运行**或**周期**，单击**确定**。
 
 8.  选择新建的标签方案，单击**任务**，页面跳转到**任务列表**，等待任务**状态**变为**成功**。
 
-    ![任务查看](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1867900161/p204906.png)
+    ![任务查看](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2050080261/p269767.png)
 
-9.  单击左侧导航栏**标签模型** \> **![进入](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188815.png)**，进入对象视图页面，单击衍生标签绑定的对象后面的**详情**，查看新建的衍生标签。
+9.  单击**标签工厂** \> **标签方案**，可查看新建的衍生标签。
 
 
