--- a/cn.zh-CN/用户指南/语义建模/标签工厂/提交标签方案.md
+++ b/cn.zh-CN/用户指南/语义建模/标签工厂/提交标签方案.md
@@ -14,6 +14,6 @@
 
 4.  在**标签方案**列表，选择新建的标签方案，单击**提交**。
 
-5.  等标签方案变为“已提交”，执行方案。
+5.  等标签方案变为**![提交成功](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5050080261/p269824.png)**，执行方案。
 
 
