--- a/cn.zh-CN/用户指南/语义建模/标签工厂/执行标签方案.md
+++ b/cn.zh-CN/用户指南/语义建模/标签工厂/执行标签方案.md
@@ -14,7 +14,7 @@
 
 3.  单击**资产加工** \> **![语义建模](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1290330161/p208848.png)** \> **标签工厂** \> **标签方案**。
 
-4.  在**标签方案**列表，选择新建的标签方案，等标签方案变为“已提交”，单击**任务**，选择执行方式。
+4.  在**标签方案**列表，选择新建的标签方案，等标签方案变为**![提交成功](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5050080261/p269824.png)**，单击**执行**，选择执行方式。
 
     -   立即运行：单击**执行**，在**运行参数配置**页面，选中**立即运行**，单击**确定**。
 
@@ -24,7 +24,7 @@
 
         ![周期调度](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2869150161/p214031.png)
 
-5.  执行完成后，提示“已提交执行, 请到任务列表查看”。
+5.  执行完成后，提示**已提交执行, 请到任务列表查看**。
 6.  在该标签方案**操作**列，单击**任务**，在弹出的**任务列表**页面，可查看生成的任务。
 
 
