--- a/cn.zh-CN/用户指南/语义建模/标签工厂/克隆标签方案.md
+++ b/cn.zh-CN/用户指南/语义建模/标签工厂/克隆标签方案.md
@@ -18,4 +18,6 @@
 
     ![克隆](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7896160161/p214178.png)
 
+5.  根据实际需求，进行标签配置或离线任务配置，详细请参见[新建标签方案](/cn.zh-CN/用户指南/语义建模/标签工厂/新建标签方案.md)。
+
 
