--- a/cn.zh-CN/用户指南/数据资产中心/画像分析/群体管理/新建群体.md
+++ b/cn.zh-CN/用户指南/数据资产中心/画像分析/群体管理/新建群体.md
@@ -19,14 +19,13 @@
 
 5.  单击**新建群体**，选择**标签圈群**，单击**确定**。
 
-6.  设置圈选条件。
+6.  选择圈群方式：可通过设置圈选条件或获取全量个体的方式圈群。
 
-    1.  选择数据源：单击**选择数据源**，在数据源列表选择云计算资源，单击**确定**。
-
-    2.  设置圈选标签：选择实体类型，单击**实体标签**，选中需要圈选的标签，并单击该标签下拉列表，设置标签的条件，单击**确定**，选中并集框，继续设置标签的条件，单击**确定**。
+    -   群选条件圈群：单击**实体类型**下拉列表，选择实体类型。单击**实体标签**，选中需要圈选的标签，并单击该标签下拉列表，设置标签的条件，单击**确定**，选中并集框，继续设置标签的条件，单击**确定**。
 
         ![圈选](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7903950161/p212025.png)
 
+    -   获取全量个体：单击**获取全量个体**。
 7.  单击**开始圈群**，完成圈选条件后，页面跳转至圈选结果。
 
 8.  单击**发布群体**，选择群体类型为**静态群体**，填写群体名称、特征，选择群体分类（分类支持新建）后，单击**确定**。
