--- a/cn.zh-CN/用户指南/数据资产中心/画像分析/群体管理/群体运维.md
+++ b/cn.zh-CN/用户指南/数据资产中心/画像分析/群体管理/群体运维.md
@@ -18,7 +18,7 @@
 
     2.  选择数据源：单击**选择数据源**，在数据源列表选择云计算资源，单击**确定**。
 
-    3.  单击**实体类型**下拉列表，选择实体类型。
+    3.  选择圈群方式：可通过设置圈选条件或获取全量个体的方式圈群。此处以设置圈选条件为例说明。
 
     4.  单击**实体标签**，选中需要圈选的标签，并单击该标签下拉列表，设置标签的条件，单击**确定**，选中并集框，继续设置标签的条件，单击**确定**。
 
