--- a/cn.zh-CN/用户指南/数据探查/标签探查.md
+++ b/cn.zh-CN/用户指南/数据探查/标签探查.md
@@ -9,9 +9,9 @@
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在左侧选择**研发工作台**，在顶部菜单栏单击**资产加工**，左侧导航栏选择**![数据探查](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1196800161/p203993.png)图标（数据探查）** \> **标签探查**。
+2.  在左侧选择**研发工作台**，在顶部菜单栏单击**资产加工**，左侧导航栏选择**![数据探查.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9794259161/p268473.png)图标（数据探查）** \> **标签探查**。
 
-3.  在标签探查页面，选择**选择云计算资源**。
+3.  在标签探查页面，选择**选择云计算资源类型** \> **选择云计算资源**。
 
 4.  在添加筛选条件区域，将要查询的标签拖至指定区域，填写或选择筛选条件，单击**查看数据**。
 
