--- a/cn.zh-CN/用户指南/数据资产中心/画像分析/个人中心/模板上传.md
+++ b/cn.zh-CN/用户指南/数据资产中心/画像分析/个人中心/模板上传.md
@@ -14,13 +14,13 @@
 
 4.  在右上角，下拉账号列表，选择**个人中心**。
 
-5.  单击**模板上传**，在**上传文件**页面，配置模板上传。
+5.  在左侧导航栏单击**模板上传**，在**上传文件**页面，配置模板上传。
 
     1.  下拉**选择工作组**下拉框，选择工作组。
 
     2.  单击**选择文件**，根据提示，上传已准备好的模板文件。
 
-        ![模板上传](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8037160161/p223904.png)
+        ![上传文件](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2554540261/p271701.png)
 
     3.  输入描述信息，单击**确定**。
 
