--- a/cn.zh-CN/最佳实践/数据汇聚.md
+++ b/cn.zh-CN/最佳实践/数据汇聚.md
@@ -1,36 +1,40 @@
 # 数据汇聚
 
-本章节为您介绍如何进行数据汇聚操作。
+本章以MySQL到MaxCompute链路为例，为您介绍新增离线数据同步任务，同步RDS数据源中的数据对象到MaxCompute。
 
-1.  您已经新建工作组，详细参见[新建工作组并添加成员](/cn.zh-CN/快速入门/新建工作组并添加成员.md)。
-2.  您已经新建云计算资源，详细参见[新建MaxCompute云计算资源](/cn.zh-CN/快速入门/新建MaxCompute云计算资源.md)。
-3.  您已经在RDS数据库插入[YHKH](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)和[XYK\_BKXX](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)表和数据。
-
-下面以MySQL到MaxCompute链路为例新增离线数据同步任务，同步RDS数据源中的数据对象[YHKH](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)和[XYK\_BKXX](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)到MaxCompute。
+-   您已经在MySQL数据库中新建表格YHKH和XYK\_BKXX，并插入数据。具体操作，请参见[YHKH](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)和[XYK\_BKXX](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)。
+-   您已经新建工作组。具体操作，请参见[新建工作组并添加成员](/cn.zh-CN/快速入门/新建工作组并添加成员.md)。
+-   您已经新建云计算资源，详细参见。具体操作，请参见[新建MaxCompute云计算资源](/cn.zh-CN/快速入门/新建MaxCompute云计算资源.md)。
 
 ## 操作步骤
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **资产加工** \> **![数据同步](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7051429061/p203665.png)**图标，进入数据同步页面。
+2.  在页面右上角单击**![导航图标](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6402159161/p268802.png)**图标，选择**研发工作台**。
 
-3.  单击左侧导航栏**数据源管理** \> **![进入](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188815.png)**按钮，进入数据源管理页面。
+3.  同步工作组数据。
 
-    1.  单击页面**同步工作组内数据源**，弹出**同步工作组内数据源**页面，勾选数据源标识，单击**确认**。
+    1.  在主菜单中选择**资产加工**，在左侧导航栏单击**![数据同步](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6644160261/p272023.png)** \> **数据源管理**，将鼠标悬浮在**数据源管理**上，单击**![图标001](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6402159161/p268819.png)**图标。
 
-    2.  查看同步的数据源列表，单击同步的数据源后的**查看详情** \> **数据对象**，进入数据对象页面。
+    2.  在**数据源管理**页面，单击**同步工作组内数据源**。
 
-    3.  单击页面右上角**同步Meta**。
+    3.  在页面右侧**同步工作组内数据源**面板，勾选待同步的数据源，单击**确认**。
 
-    4.  弹出**同步Meta**页面，单击**确认**。
+    4.  在数据源列表中，单击同步的数据源**操作**列的**查看详情**。
 
-        ![同步Meta](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7051429061/p206086.png)
+    5.  在数据源详情页面**数据对象**页签，单击右上角**同步Meta**。
 
-    5.  等待所有数据对象同步成功并查看。
+    6.  在**同步Meta**对话框，单击**确认** \> **确定**，等待页面提示**同步成功**。
 
-4.  单击左侧导航栏**离线数据同步**，进入离线数据同步页面，单击**新增任务**，弹出**新增周期任务**页面。
+        ![同步Meta ](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0335159161/p268859.png)
 
-    1.  在**填写基本信息**页面，填写基本信息。
+4.  同步离线数据。
+
+    1.  在左侧导航栏单击**![数据同步](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6644160261/p272023.png)** \> **离线数据同步**。
+
+    2.  在**离线数据同步**页面，单击**新增任务**。
+
+    3.  在**新增周期任务**页面**填写基本信息**区域，填写基本信息。
 
         ![基本信息](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7051429061/p206091.png)
 
@@ -39,7 +43,7 @@
         |任务1|银行客户信息上云|
         |任务2|信用卡信息上云|
 
-    2.  填写基本信息操作完成后，弹出**选择数据源**区域，选择**数据源类型**和**数据源**，选择**数据对象**，完成后自动弹出数据对象的字段和类型等信息。
+    4.  填写基本信息操作完成后，弹出**选择数据源**区域，选择**数据源**和**数据对象**，完成后自动弹出数据对象的字段和类型等信息。
 
         ![选择数据源](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7051429061/p203782.png)
 
@@ -50,7 +54,7 @@
         |银行客户信息上云|MySQL|YHKH|
         |信用卡信息上云|XYK\_BKXX|
 
-    3.  在弹出**选择目标端**区域，选择**数据源类型**和**数据源**，单击**数据对象**下的**创建目标表**，完成后自动弹出数据对象的字段和类型等信息，选择**非分区表**，单击**确认**。
+    5.  在弹出**选择目标端**区域，选择**数据源类型**和**数据源**，单击**数据对象**下的**创建目标表**，完成后自动弹出数据对象的字段和类型等信息，选择**非分区表**，单击**确认**。
 
         选择目标端配置：
 
@@ -59,22 +63,20 @@
         |银行客户信息上云|MaxCompute|stg\_base\_yhkh\_di|银行客户信息|
         |信用卡信息上云|stg\_base\_xykbkjl\_di|信用卡信息|
 
-    4.  弹出**字段映射**信息。
+    6.  在**配置任务调度**区域，**任务调度类型**选择**一次性调度**。
 
-    5.  单击**配置任务调度** \> **一次性调度**，单击**提交。**
+    7.  配置完成后，单击**提交**。
 
-    6.  在**周期任务管理**列表查看新建的任务，单击任务后的**上线**，弹出**确认上线**提示页面，单击**确认**。
+    8.  在**周期任务管理**列表查看新建的任务，单击任务后的**上线**，弹出**确认上线**提示页面，单击**确认**。
 
-    7.  上线成功后，单击任务后的**监控**，进入**离线同步实例**页面，等待**实例状态**为**运行成功**。
+    9.  上线成功后，单击任务后的**监控**，进入**离线同步实例**页面，等待**实例状态**为**运行完成**。
 
-5.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **资产加工** \> **![数据探查](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8366900161/p208214.png)**，进入数据探查页面。
+5.  查看物理表数据。
 
-6.  单击**数据探查** \> **物理表探查**，进入物理表探查页面。
+    1.  在左侧导航栏单击**![数据探查](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3844159161/p268872.png)** \> **物理表探查** \> **MaxCompute**，选中**MaxCompute**下的云计算资源。
 
-    1.  选中**MaxCompute**下的云计算资源，输入目标表表名。
+    2.  在目标表**操作**列单击**数据预览**，查看物理表数据详情。
 
-    2.  选中目标表表名，查看物理表数据预览。
-
-        ![表查看](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2266060161/p223977.png)
+        ![数据预览详情](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3844159161/p268883.png)
 
 
