--- a/cn.zh-CN/常见问题/系统设置.md
+++ b/cn.zh-CN/常见问题/系统设置.md
@@ -11,15 +11,15 @@ keyword: [成员管理, 全员管理]
 
 ## 账号都支持那些角色，每个角色都有哪些权限？
 
-工作组成员支持的角色：工作组管理员、工作开发者、工作组分析师和工作组访客。
+工作组成员支持的角色：工作组管理员、工作开发者、工作组分析员。
 
 租户支持的角色：包括租户管理员、租户访客、租户数据资产管理员、租户运维人员。
 
-所有的角色权限，请查看产品页面右上角**账号** \> **系统配置** \> **权限列表**。
+所有的角色权限，请查看产品页面右上角**账号** \> **系统设置** \> **权限列表**。
 
 ## 新建云计算资源怎么获取白名单IP?
 
-1.您可以单击产品页面右上角**账号** \> **系统配置** \> **工作组管理**。
+1.单击产品页面右上角**账号** \> **系统设置** \> **工作组管理**。
 
 2.单击目标工作组后面的**云计算资源** \> **新建云计算资源**，资源存储类型选择**ApsaraDB for RDS**，单击后面的**![查看](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6495121161/p228757.png)**查看白名单IP列表。
 
