--- a/cn.zh-CN/常见问题/画像分析.md
+++ b/cn.zh-CN/常见问题/画像分析.md
@@ -15,7 +15,7 @@ keyword: [分析, 群体圈群, 群体, 圈群]
 
 需要在语义建模中设置标签值类型，支持的标签类型包含：枚举值、布尔值、字符串、数值和日期。
 
-设置标签类型为“枚举值”，支持标签内容下拉选择；类型为“字符型”则不支持。
+设置标签类型为“枚举值”，支持通过下拉选择；类型为“字符型”则不支持。
 
 ## 群体分析过程中度量选不了怎么解决？
 
