--- a/cn.zh-CN/快速入门/准备工作.md
+++ b/cn.zh-CN/快速入门/准备工作.md
@@ -17,6 +17,8 @@
 
 ## 初始化语句
 
+准备建表语句和插入数据语句以，在MaxCompute数据库中创建表stg\_base\_yhkh\_di 为例介绍，这里所有表的名称和内容均是举例，用户可根据需要自定义
+
 stg\_base\_yhkh\_di表DDL语句：
 
 ```
