--- a/cn.zh-CN/用户指南/数据建模/模型管理/手动新建逻辑表.md
+++ b/cn.zh-CN/用户指南/数据建模/模型管理/手动新建逻辑表.md
@@ -10,7 +10,7 @@
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在左侧选择**研发工作台**，在顶部菜单栏单击**资产加工**，左侧导航栏选择**![数据建模](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9392067061/p190187.png)数据建模** \> **数据模型设计** \> **模型管理**。
+2.  在左侧选择**研发工作台**，在顶部菜单栏单击**资产加工**，左侧导航栏选择**![数据建模.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1205259161/p268674.png)数据建模** \> **数据模型设计** \> **模型管理**。
 
 3.  在**数据模型**页面，单击**新建逻辑表**。
 
@@ -18,7 +18,7 @@
 
 4.  配置数据模型信息。
 
-    1.  在**新建-数据模型**页面，按提示配置逻辑表名称、表别称、储存生命周期和逻辑表描述。
+    1.  在**新增逻辑表**页面，按提示配置逻辑表名称、表别称、储存生命周期和逻辑表描述。
 
         ![新建逻辑表.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9803067061/p190655.png)
 
