--- a/cn.zh-CN/用户指南/通用资源/数据基础库.md
+++ b/cn.zh-CN/用户指南/通用资源/数据基础库.md
@@ -10,7 +10,7 @@
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在左侧选择**研发工作台**，在顶部菜单栏单击**资产加工**，左侧导航栏选择**![数据建模](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9392067061/p190187.png)数据建模** \> **数据模型设计** \> **模型管理** \> **公共字段集**。
+2.  在左侧选择**研发工作台**，在顶部菜单栏单击**资产加工**，左侧导航栏选择**![通用资源](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4750080261/p270024.png)通用资源** \> **数据基础库**。
 
 3.  在数据基础库管理页面，单击**新建基础库**。
 
