--- a/cn.zh-CN/用户指南/质量报告/质量检测计划管理.md
+++ b/cn.zh-CN/用户指南/质量报告/质量检测计划管理.md
@@ -7,9 +7,9 @@
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在左侧选择**研发工作台**，在顶部菜单栏单击**质量报告**。
+2.  在左侧选择**研发工作台**，在顶部菜单栏单击**质量评估**。
 
-3.  在检测计划管理页面，选择**质量检测**。
+3.  在检测计划管理页面，选择**质量检查计划**。
 
 4.  在质量检测计划管理页面，单击**新建计划**。
 
