--- a/cn.zh-CN/用户指南/质量报告/质量检查任务.md
+++ b/cn.zh-CN/用户指南/质量报告/质量检查任务.md
@@ -4,11 +4,11 @@
 
 质量检测任务完成运行。
 
-通过质量检测任务详情可以查看对模型的质量检测结果，便于对模型质量做出评估。
+通过查看质量检测任务详情，了解模型的质量检测结果，便于对模型质量做出评估。
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在左侧选择**研发工作台**，在顶部菜单栏单击**质量报告**。
+2.  在左上角选择**研发工作台**，在顶部菜单栏单击**质量评估**。在左侧菜单栏单击**质量检查任务**。
 
     ![质量任务检查.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6476250161/p209340.png)
 
