--- a/cn.zh-CN/用户指南/质量报告/数据质量报告.md
+++ b/cn.zh-CN/用户指南/质量报告/数据质量报告.md
@@ -10,13 +10,13 @@
 
 1.  登录[数据资源平台（DataQ）控制台](https://dataq.console.aliyun.com)。
 
-2.  在顶部菜单栏单击**数据质量报告**在左侧导航栏单击**质量评估报告**。
+2.  在左上角选择**研发工作台**，在顶部菜单栏单击**质量评估**，在左侧导航栏单击**质量评估报告**。
 
 3.  在**数据质量监控报告**页面，查看数据质量指标、综合质量得分、多维度质量评分对比和质量评分明细。
 
-    ![数据质量报告](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7219559951/p147264.png)
+    ![数据评估报告](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6159540261/p271719.png)
 
-    -   选择右上角**选择时间**，可查看具体某天的数据质量报告。
+    -   在右上角选择时间，可查看具体某天的数据质量报告。
     -   单击综合质量得分下的**评分趋势查看**，查看趋势图，单击**确定**。
 
         ![趋势图](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8219559951/p147283.png)
