--- a/cn.zh-CN/最佳实践/准备工作/新建工作组并添加成员.md
+++ b/cn.zh-CN/最佳实践/准备工作/新建工作组并添加成员.md
@@ -4,7 +4,7 @@
 
 您已经购买数据资源平台，详细请参见：[购买数据资源平台](https://common-buy.aliyun.com/?commodityCode=drp_basic_public_cn#/buy)。
 
-所有租户下的工作组都是隔离的，同一个租户项可以新建多个工作组。
+所有租户下的工作组都是隔离的，同一个租户下可以新建多个工作组。
 
 ## 添加工作组
 
@@ -14,7 +14,7 @@
 
 3.  在**工作组管理**页面，单击页面右上角**新建工作组**。
 
-4.  填写工作组名称、工作组标识、工作组管理员，单击**确定**。
+4.  填写工作组名称、工作组标识、工作组管理员以及描述，单击**确定**。
 
     **说明：** 系统自带默认工作组，可修改工作组名称。
 
