--- a/cn.zh-CN/最佳实践/准备工作/新建云计算资源.md
+++ b/cn.zh-CN/最佳实践/准备工作/新建云计算资源.md
@@ -1,9 +1,9 @@
 # 新建云计算资源
 
-本章节为您介绍如何新建ApsaraDB for RDS和MaxCompute云计算资源。
+本章节以新建ApsaraDB for RDS和MaxCompute云计算资源为例，为您详细介绍如何新建云计算资源。
 
--   您已经购买MaxCompute云计算资源，详细操作参见：[开通MaxCompute](https://help.aliyun.com/document_detail/58226.html?spm=a2c4g.11174283.6.588.526d590e86y69N)。
 -   您已经购买ApsaraDB for RDS云计算资源，并完成RDS快速入门，详细操作参见：[RDS快速入门](https://help.aliyun.com/document_detail/26124.html?spm=a2c4g.11186623.6.664.37dd38f8FA2Ws2)。
+-   您已经购买MaxCompute云计算资源，详细操作参见：[开通MaxCompute](https://help.aliyun.com/document_detail/58226.html?spm=a2c4g.11174283.6.588.526d590e86y69N)。
 
 添加云计算资源为使用数据资源平台做数据支撑。
 
@@ -18,7 +18,9 @@
 -   [申请外网地址](https://help.aliyun.com/document_detail/26128.html?spm=a2c4g.11186623.2.34.708540a8dzSOaO)。
 -   [创建账号和数据库](https://help.aliyun.com/document_detail/87038.html?spm=a2c4g.11186623.2.35.708540a8dzSOaO)。
 -   [连接MySQL实例](https://help.aliyun.com/document_detail/26138.html?spm=a2c4g.11186623.6.669.303238f8gRrN8t)。
--   在RDS数据库建表和插入语句，详细参见[系统初始化语句](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)。
+-   在RDS数据库建表和插入语句，详细参见[准备数据](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)。
+
+**操作步骤**
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
@@ -31,7 +33,7 @@
     |参数名称|说明|
     |----|--|
     |**云计算资源标识**|自定义的ApsaraDB for RDS云计算资源的标识。|
-    |**资源存储类型**|单击下拉框选择您的云计算资源类型为 **ApsaraDB for RDS**，单击后面的**![白名单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2847900161/p211240.png)**查看白名单列表。|
+    |**资源存储类型**|单击下拉框选择您规划的云计算资源，这里以选择**ApsaraDB for RDS**为例，单击后面的**![白名单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2847900161/p211240.png)**查看白名单列表。|
     |**是否为VPC资源**|默认选否。|
     |**域名**|ApsaraDB for RDS实例的外网地址。您可以通过以下步骤进行获取：     1.  [登录RDS管理控制台](https://rds.console.aliyun.com/?spm=a2c4g.11186623.2.40.708540a8dzSOaO)。
     2.  单击左侧导航栏**实例列表**，在页面左上角，选择实例所在地域。
@@ -48,11 +50,7 @@
     4.  单击左侧导航栏的**账号管理**进行查看。 |
     |**日志模型**|    -   无：无日志。
     -   binlog：有日志。 |
-    |**登录密码**|登录数据库的密码。    1.  [登录RDS管理控制台](https://rds.console.aliyun.com/?spm=a2c4g.11186623.2.40.708540a8dzSOaO)。
-    2.  单击左侧导航栏**实例列表**，在页面左上角，选择实例所在地域。
-    3.  找到目标实例，单击**实例 ID/名称**。
-    4.  单击左侧导航栏的**账号管理**进行查看。
-如果忘记密码，可[重置密码](https://help.aliyun.com/document_detail/96100.html?spm=a2c4g.11186623.2.44.708540a8dzSOaO)操作。|
+    |**登录密码**|登录数据库的密码。如果忘记密码，可参考[重置密码](https://help.aliyun.com/document_detail/96100.html?spm=a2c4g.11186623.2.44.708540a8dzSOaO)操作。 |
     |**描述**|可选项，RDS 云计算资源的描述。|
     |**是否校验连通性**|默认选择”是“，用于新建资源的连通性测试。|
 
@@ -70,9 +68,11 @@
 
 如果您需要将MaxCompute中的数据接入数据资源平台，还需要在MaxCompute项目中完成数据表的创建和数据导入。
 
--   在MaxCompute数据库建表和插入语句，详细参见[系统初始化语句](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)。
+-   在MaxCompute数据库建表和插入语句，详细参见[准备数据](/cn.zh-CN/最佳实践/准备工作/系统初始化语句.md)。
 -   创建MaxCompute数据表方法参见[创建表](https://help.aliyun.com/document_detail/27808.html?spm=a2c4g.11186623.6.597.31c26620pTTWQt)。
 -   数据导入MaxCompute数据表方法参见[导入数据](https://help.aliyun.com/document_detail/27809.html?spm=a2c4g.11186623.6.598.2cc746fevRps1u)。
+
+**操作步骤**
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
