--- a/cn.zh-CN/最佳实践/准备工作/用户管理.md
+++ b/cn.zh-CN/最佳实践/准备工作/用户管理.md
@@ -1,10 +1,8 @@
 # 用户管理
 
-本章节介绍如何对账号添加用户角色操作。
+本章节介绍如何对账号添加用户角色操作。为方便管理，不同的角色，具有不同的操作权限。
 
 您已经[购买数据资源平台](https://common-buy.aliyun.com/?commodityCode=drp_basic_public_cn#/buy)。
-
-给账号添加不同的角色有不同的操作权限。
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
